--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="/auth/google">Authenticate with Google</a>
+  <a href="/users/signup">SignUp to access features</a>
 </body>
 
 </html>
